# DOBOT_pickn_place

./: .gitignore  README.md
calibration/: axab_calibration_02122025.yaml
src/aruco_perception/: CMakeLists.txt  README.md  package.xml
src/aruco_perception/include/aruco_perception/: aruco_detector.hpp
src/aruco_perception/launch/: aruco_perception.launch.py
src/aruco_perception/src/: aruco_detector_node.cpp  perception_calibration.cpp
src/camera_calibration/: CMakeLists.txt  README.md  package.xml
src/camera_calibration/calib/: axab_calibration_01011970.yaml
src/camera_calibration/include/camera_calibration/: eye_on_hand_calibrator.hpp
src/camera_calibration/launch/: camera_calibration.launch.py  camera_calibration_gui.launch.py
src/camera_calibration/python/camera_calibration_gui/: main.py
src/camera_calibration/src/: calibration_perception.cpp  eye_on_hand_calibrator.cpp
src/dobot_bringup_v4/: README.md
src/dobot_bringup_v4/config/: param.json
src/dobot_bringup_v4/launch/: dobot_bringup_ros2.launch.py
src/dobot_msgs_v4/: README.md
src/dobot_rviz/: README.md
src/dobot_rviz/launch/: dobot_rviz.launch.py
src/dobot_rviz/rviz/: urdf.rviz
src/dobot_rviz/urdf/: cr10_robot.urdf  cr12_robot.urdf  cr16_robot.urdf  cr20_robot.urdf  cr30h_robot.urdf  cr3_robot.urdf  cr5_robot.urdf  cr7_robot.urdf  me6_robot.urdf  nova2_robot.urdf  nova5_robot.urdf
src/obstacle_perception/: README.md  package.xml
src/obstacle_perception/include/obstacle_perception/: obstacle_memory_node.hpp  obstacle_perception_node.hpp
src/obstacle_perception/launch/: obstacle_perception.launch.py
src/obstacle_perception/src/: obstacle_memory_node.cpp  obstacle_perception_node.cpp
